dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

dnl FIXME: This file currently contains a lot of useful tests for things
dnl that autoconf doesn't know how to do natively.  Some of those have since
dnl been put into the autoconf source tree; others may have better versions
dnl available elsewhere.  No one, to my knowledge, has checked the macros in
dnl here against other sources, updated them to better versions if
dnl available, and donated our macros back if no one else has them.  This
dnl really should be done.

dnl A file that should always be in the root directory of the source tree,
dnl to make sure our source file was set correctly.
AC_INIT(Makefile.global.in)

dnl Just to be sure.
chmod +x config.sub config.guess

dnl Fix the paths.
AC_PREFIX_DEFAULT(/usr/local/news)
test "x$prefix" = xNONE && prefix=$ac_default_prefix
test "x$exec_prefix" = xNONE && exec_prefix=$ac_default_prefix

dnl Parse the arguments.  libtool, then specifying alternate paths, then
dnl various other compile options.

LIBTOOL=''
UPLIBTOOL=''
EXTOBJ='o'
EXTLIB='a'
AC_ARG_ENABLE(libtool,
    [  --enable-libtool        Use libtool for lib generation [default=no]],
    [
        if test "$enableval" = yes ; then
            LIBTOOL='$(SHELL) ../libtool'
            UPLIBTOOL='$(SHELL) ../../libtool'
            EXTOBJ='lo'
            EXTLIB='la'
        fi
    ])
AC_SUBST(LIBTOOL)
AC_SUBST(UPLIBTOOL)
AC_SUBST(EXTOBJ)
AC_SUBST(EXTLIB)

AC_ARG_WITH(control-dir,
    [  --with-control-dir=PATH Control programs [PREFIX/bin/control]],
    CONTROLDIR=$with_control_dir,
    CONTROLDIR=$prefix/bin/control)
AC_SUBST(CONTROLDIR)

AC_ARG_WITH(db-dir,
    [  --with-db-dir=PATH      News database files [PREFIX/db]],
    DBDIR=$with_db_dir,
    DBDIR=$prefix/db)
AC_SUBST(DBDIR)

AC_ARG_WITH(etc-dir,
    [  --with-etc-dir=PATH     News config files [PREFIX/etc]],
    ETCDIR=$with_etc_dir,
    ETCDIR=$prefix/etc)
AC_SUBST(ETCDIR)

AC_ARG_WITH(filter-dir,
    [  --with-filter-dir=PATH  Embedded filters [PREFIX/bin/filter]],
    FILTERDIR=$with_filter_dir,
    FILTERDIR=$prefix/bin/filter)
AC_SUBST(FILTERDIR)

AC_ARG_WITH(lib-dir,
    [  --with-lib-dir=PATH     News lib files [PREFIX/lib]],
    LIBDIR=$with_lib_dir,
    LIBDIR=$prefix/lib)
AC_SUBST(LIBDIR)

AC_ARG_WITH(log-dir,
    [  --with-log-dir=PATH     Logging directory [PREFIX/log]],
    LOGDIR=$with_log_dir,
    LOGDIR=$prefix/log)
AC_SUBST(LOGDIR)

AC_ARG_WITH(run-dir,
    [  --with-run-dir=PATH     News pid/runtime files [PREFIX/run]],
    RUNDIR=$with_run_dir,
    RUNDIR=$prefix/run)
AC_SUBST(RUNDIR)

AC_ARG_WITH(spool-dir,
    [  --with-spool-dir=PATH   News storage [PREFIX/spool]],
    SPOOLDIR=$with_spool_dir,
    SPOOLDIR=$prefix/spool)
AC_SUBST(SPOOLDIR)

AC_ARG_WITH(tmp-path,
    [  --with-tmp-path=PATH    Temporary files directory [PREFIX/tmp]],
    TMPPATH=$with_tmp_path,
    TMPPATH=$prefix/tmp)
AC_SUBST(TMPPATH)

AC_ARG_WITH(sendmail,
    [  --with-sendmail=PATH    Specify path to sendmail],
    SENDMAIL=$with_sendmail)

AC_ARG_WITH(news-user,
    [  --with-news-user=USER   News user id [news]],
    NEWSUSER=$with_news_user,
    NEWSUSER=news)
AC_SUBST(NEWSUSER)
AC_DEFINE_UNQUOTED(NEWSUSER, "$NEWSUSER")

AC_ARG_WITH(news-group,
    [  --with-news-group=GROUP News group id [news]],
    NEWSGRP=$with_news_group,
    NEWSGRP=news)
AC_SUBST(NEWSGRP)
AC_DEFINE_UNQUOTED(NEWSGRP, "$NEWSGRP")

AC_ARG_WITH(news-master,
    [  --with-news-master=USER News master [usenet]],
    NEWSMASTER=$with_news_master,
    NEWSMASTER=usenet)
AC_SUBST(NEWSMASTER)
AC_DEFINE_UNQUOTED(NEWSMASTER, "$NEWSMASTER")

dnl This is actually give to AC_SUBST later on.
AC_ARG_WITH(syslog-facility,
    [  --with-syslog-facility=LOG_FAC  Syslog facility [LOG_NEWS or LOG_LOCAL1]],
    SYSLOG_FACILITY=$with_syslog_facility,
    SYSLOG_FACILITY=none)

NEWSUMASK=02
FILEMODE=0664
DIRMODE=0775
RUNDIRMODE=0770
AC_ARG_WITH(news-umask,
    [  --with-news-umask=UMASK umask for news files [002]],
    with_news_umask=`echo "$with_news_umask" | sed 's/^0*//'`
    if test "x$with_news_umask" = x22 ; then
        NEWSUMASK=022
        FILEMODE=0644
        DIRMODE=0755
        RUNDIRMODE=0750
    else
        if test "x$with_news_umask" != x2 ; then
            AC_MSG_ERROR(Valid umasks are 02 or 022)
        fi
    fi)
AC_SUBST(NEWSUMASK)
AC_SUBST(FILEMODE)
AC_SUBST(DIRMODE)
AC_SUBST(RUNDIRMODE)
AC_DEFINE_UNQUOTED(ARTFILE_MODE, $FILEMODE)
AC_DEFINE_UNQUOTED(BATCHFILE_MODE, $FILEMODE)
AC_DEFINE_UNQUOTED(GROUPDIR_MODE, $DIRMODE)
AC_DEFINE_UNQUOTED(NEWSUMASK, $NEWSUMASK)

AC_ARG_WITH(innd-port,
    [  --with-innd-port=PORT   Additional low-numbered port for inndstart],
    AC_DEFINE_UNQUOTED(INND_PORT, $with_innd_port))

AC_ARG_ENABLE(tagged-hash,
    [  --enable-tagged-hash    Use tagged hash table for history],
    DO_DBZ_TAGGED_HASH=DO
    AC_DEFINE(DO_TAGGED_HASH),
    DO_DBZ_TAGGED_HASH=DONT)
AC_SUBST(DO_DBZ_TAGGED_HASH)

INEWSMODE=2555
AC_ARG_ENABLE(setgid-inews,
    [  --disable-setgid-inews  Don't install inews setgid],
    if test "x$enableval" = xno ; then
        INEWSMODE=0550
    fi)
AC_SUBST(INEWSMODE)

RNEWSGRP=uucp
RNEWSMODE=4550
AC_ARG_ENABLE(uucp-rnews,
    [  --disable-uucp-rnews    Don't install rnews setuid, group uucp],
    if test "x$enableval" = xno ; then
        RNEWSGRP=$NEWSGRP
        RNEWSMODE=0500
    fi)
AC_SUBST(RNEWSGRP)
AC_SUBST(RNEWSMODE)

AC_ARG_WITH(perl,
    [  --with-perl             Embedded Perl script support],
    DO_PERL=DO
    AC_DEFINE(DO_PERL))

AC_ARG_WITH(python,
    [  --with-python           Embedded Python module support],
    DO_PYTHON=define
    AC_DEFINE(DO_PYTHON))

AC_ARG_WITH(tcl,
    [  --with-tcl              Embedded TCL script support],
    DO_TCL=DO TCL_LIB="-ltcl -lm" TCL_INC="-I/usr/local/include"
    AC_DEFINE(DO_TCL),
    DO_TCL=DONT TCL_LIB="" TCL_INC="")
AC_SUBST(TCL_LIB)
AC_SUBST(TCL_INC)

AC_ARG_WITH(largefiles,
    [  --with-largefiles       Support for files greater than 2GB],
    DO_LFS=DO,
    DO_LFS=DONT)
AC_SUBST(DO_LFS)

AC_ARG_WITH(log-compress,
    [  --with-log-compress=METHOD   Log compression method [gzip]],
    LOG_COMPRESS=$with_log_compress,
    LOG_COMPRESS=gzip)
case "$LOG_COMPRESS" in
bzip2) LOG_COMPRESSEXT=".bz2" ;;
gzip)  LOG_COMPRESSEXT=".gz"  ;;
*)     LOG_COMPRESSEXT=".Z"   ;;
esac
AC_SUBST(LOG_COMPRESS)
AC_SUBST(LOG_COMPRESSEXT)

dnl FIXME: hostname is more reliable on most systems; uname may truncate.
HOSTNAME=`uname -n`
AC_SUBST(HOSTNAME)

dnl If libtool was requested, configure it now.
if test x"$EXTOBJ" = xlo ; then
    AM_PROG_LIBTOOL
fi

dnl Checks for programs.
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_LEX
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_YACC

dnl System specific checks.
AC_AIX                  dnl NOTUSED
AC_ISC_POSIX

dnl Checks for pathnames.

dnl See if we have ctags; if so, set CTAGS to its full path plus the -t -w
dnl options.  Otherwise, set CTAGS to echo.
AC_PATH_PROG(CTAGS, ctags, echo)
if test x"$CTAGS" != xecho ; then
    CTAGS="$CTAGS -t -w"
fi

dnl Use INN_PATH_PROG if it's an error not to find a program.
AC_DEFUN(INN_ENSURE_PATH_PROG, [
    AC_PATH_PROG($1, $2)
    if test -z "${$1}" ; then
        AC_MSG_ERROR($2 was not found in path and is required)
    fi
])

INN_ENSURE_PATH_PROG(_PATH_AWK,awk)
INN_ENSURE_PATH_PROG(_PATH_EGREP,egrep)
INN_ENSURE_PATH_PROG(_PATH_PERL,perl)
INN_ENSURE_PATH_PROG(_PATH_SH,sh)
INN_ENSURE_PATH_PROG(_PATH_SED,sed)
INN_ENSURE_PATH_PROG(_PATH_SORT,sort)

dnl makehistory needs to know what the sort program is.
AC_DEFINE_UNQUOTED(SORT_PGM, "$_PATH_SORT")

dnl Check for a required version of Perl.  We have to use English to get
dnl around the fact Perl's version variable is $], a variable that m4 simply
dnl cannot cope with (even with changequote).
AC_DEFUN(INN_PERL_VERSION,
    AC_CACHE_CHECK(for Perl version, inn_cv_perl_version, [
    if $_PATH_PERL -e 'require $1;' > /dev/null 2>&1 ; then
        inn_cv_perl_version=`$_PATH_PERL -MEnglish -e 'print $PERL_VERSION'`
    else
        AC_MSG_ERROR(Perl $1 or greater is required)
    fi
]))

dnl If DO_PERL is set, require 5.004; otherwise, 5.003 is sufficient.
if test x"$DO_PERL" = xDO ; then
    INN_PERL_VERSION(5.004)
else
    INN_PERL_VERSION(5.003)
fi

dnl Look for PGP 5.0's pgpv, or pgp if pgpv is not found.
pgpverify=true
AC_PATH_PROGS(_PATH_PGP, pgpv pgp)
if test -z "$_PATH_PGP" ; then
    pgpverify=false
fi
AC_SUBST(pgpverify)

dnl Look for a program that takes an ftp URL as a command line argument and
dnl retrieves the file to the current directory.  Shame we can't also use
dnl lynx -source; it only writes to stdout.
AC_PATH_PROGS(GETFTP, ncftp wget, $prefix/bin/simpleftp)

dnl If we're going to be configuring large file support, we'll need getconf.
if test x"$DO_LFS" = xDO ; then
    AC_PATH_PROG(GETCONF, getconf)
    if test -z "$GETCONF" ; then
      AC_MSG_ERROR(getconf not found, required to configure largefile support)
    fi
fi

dnl Make sure we have both compress and gzip, since the UUCP batching
dnl scripts require both.  If we're using a log compression method other
dnl than compress or gzip, check for it too and make sure it exists.  If
dnl we don't find compress or gzip, just use the bare program names in the
dnl hope that the path will be better at the time the script runs (or that
dnl the script will never run).
case "$LOG_COMPRESS" in
compress|gzip) ;;
*)             INN_ENSURE_PATH_PROG(LOG_COMPRESS, "$LOG_COMPRESS")
esac
AC_PATH_PROG(COMPRESS, compress, compress)
if test x"$LOG_COMPRESS" = xcompress ; then
    if test x"$COMPRESS" = xcompress ; then
        AC_MSG_ERROR(compress not found but specified for log compression)
    fi
    LOG_COMPRESS="$COMPRESS"
fi
AC_PATH_PROG(GZIP, gzip, gzip)
if test x"$LOG_COMPRESS" = xgzip ; then
    if test x"$GZIP" = xgzip ; then
        AC_MSG_ERROR(gzip not found but specified for log compression)
    fi
    LOG_COMPRESS="$GZIP"
fi

dnl The sendmail code takes this philosophy:  We assume that there are some
dnl sites which don't have sendmail in the path for a reason, whatever that
dnl may be.  And we also assume that there are some of those sites which
dnl don't want us to automatically pick one from a likely place.  So we
dnl detect it, then search for it, but then notify the human.
if test "${with_sendmail+set}" = set ; then
    AC_MSG_CHECKING(for sendmail)
    AC_MSG_RESULT($SENDMAIL)
else
    AC_PATH_PROG(SENDMAIL, sendmail)
    if test -z "$SENDMAIL" ; then
        echo ''
        echo 'No sendmail in path.  Looking in likely places....'
        echo ''
        AC_PATH_PROG(SENDMAIL, sendmail, ,
            $PATH:/usr/lib:/usr/sbin:/usr/ucblib)
        echo ''
        if test -n "$SENDMAIL" ; then
            echo "sendmail was found at $SENDMAIL.  If this is correct, re-run"
            echo with --with-sendmail=$SENDMAIL.
            echo ''
        fi
        AC_MSG_ERROR(sendmail not found, re-run with --with-sendmail)
    fi
fi

dnl FIXME: innshellvars* wants to know if we have uustat, send-uucp expects
dnl it to be in the old subst DO/DONT format.  Should take a path.
AC_CHECK_PROG(HAVE_UUSTAT, uustat, DO, DONT)
AC_SUBST(HAVE_UUSTAT)

dnl If we're compiling with Python support, make sure Python is available.
if test x"$DO_PYTHON" = xdefine ; then
    INN_ENSURE_PATH_PROG(_PATH_PYTHON, python)
fi

dnl Checks for libraries.  Remember that these tests are done by linking a
dnl small program referring to the function with that library, so if the
dnl function exists in libc and the library exists, the test will always
dnl succeed regardless of whether the library is needed for the function.
dnl In several cases, we explicitly just add the library to LIBS on success
dnl rather than using default actions so as not to clutter config.h with
dnl defines we never use.

dnl Several OSes have crypt() in a seperate library for legal reasons.
AC_CHECK_LIB(crypt, crypt, LIBS="$LIBS -lcrypt")

dnl Check for setproctitle in libc first, then libutil if not found there.
AC_CHECK_FUNCS(setproctitle, AC_DEFINE(HAVE_SETPROCTITLE),
    AC_CHECK_LIB(util, setproctitle, [
        LIBS="$LIBS -lutil"
        AC_DEFINE(HAVE_SETPROCTITLE)
        inn_lib_util=1
    ]))

dnl FIXME: What platform is this actually needed on?
AC_CHECK_LIB(44bsd, inet_addr, LIBS="$LIBS -l44bsd")

dnl The rat's nest of networking libraries.  The common cases are not to
dnl need any extra libraries, or to need -lsocket -lnsl.  We need to avoid
dnl linking with libnsl unless we need it, though, since on some OSes where
dnl it isn't necessary it will totally break networking.  Unisys also
dnl includes gethostbyname in libsocket but needs libnsl for socket().
dnl Always link with libresolv if it's found.
AC_CHECK_FUNC(gethostbyname, , [
    AC_CHECK_LIB(nsl, gethostbyname, LIBS="$LIBS -lnsl")
])
AC_CHECK_LIB(resolv, gethostbyname, LIBS="$LIBS -lresolv")
AC_CHECK_FUNC(socket, , [
    AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket", [
        AC_CHECK_LIB(nsl, socket, LIBS="$LIBS -lsocket -lnsl", , -lsocket)
    ], "$LIBS")
])

dnl By this point, we almost certainly have inet_aton, but if we don't,
dnl check in another place.  If we still can't find it, add it to LIBOBJS.
AC_CHECK_FUNC(inet_aton, , [
    AC_CHECK_LIB(bind, inet_aton, LIBS="$LIBS -bind",
                 LIBOBJS="$LIBOBJS inet_addr.o")
])

dnl INN currently doesn't use the threading libraries, but check for them in
dnl preparation for the day we do.
AC_CHECK_LIB(thread, pthread_create, [
    inn_have_threads=1
    THREADLIB=-lthread
], [
    AC_CHECK_LIB(pthread, pthread_create, [
        inn_have_threads=1
        THREADLIB=-lpthread
    ])
])
if test -n "$inn_have_threads" ; then
    THREADFLAGS="-D_REENTRANT -DPOSIX_PTHREAD_SEMANTICS -D_THREAD_SAFE"
fi
AC_SUBST(THREADLIB)
AC_SUBST(THREADFLAGS)

dnl FIXME: These shouldn't go into the global LIBS variable.  getspnam() is
dnl only used by the authentication programs.
AC_CHECK_LIB(shadow, getspnam)

dnl FIXME: This should be combined with AC_FUNC_GETLOADAVG
AC_CHECK_LIB(elf, nlist)

dnl AIX needs libbsd for flock().
AC_CHECK_LIB(bsd, flock)

dnl FIXME: This is only used by the keywords code in innd/art.c and
dnl shouldn't be in the global LIBS variable.
AC_CHECK_LIB(regex, regexec)

dnl Some of the authentication programs want to be able to open dbm files.
AC_CHECK_LIB(ndbm, dbm_open, DBM_LIB="-lndbm")
AC_CHECK_LIB(dbm, dbm_open, DBM_LIB="-ldbm")
AC_SUBST(DBM_LIB)

dnl Libraries and flags for embedded Perl.
if test x"$DO_PERL" = xDO ; then
    AC_MSG_CHECKING(for Perl linkage)
    inn_perl_core_path=`$_PATH_PERL -MConfig -e 'print $Config{archlib}'`
    inn_perl_core_libs=`$_PATH_PERL -MExtUtils::Embed -e ldopts | tail -1`
    for i in $LIBS ; do
        inn_perl_core_libs=`echo "$inn_perl_core_libs" | sed "s/ $i//"`
    done
    inn_perl_core_libs=`echo "$inn_perl_core_libs" | sed 's/^  *//'`
    PERL_LIB="$inn_perl_core_libs"
    PERL_INC="-I${inn_perl_core_path}/CORE"
    AC_MSG_RESULT($inn_perl_core_path)
else
    PERL_LIB=''
    PERL_INC=''
fi
AC_SUBST(PERL_LIB)
AC_SUBST(PERL_INC)

dnl Libraries and flags for embedded Python.
dnl FIXME: I wish there was a less icky way to get this.
if test x"$DO_PYTHON" = xdefine ; then
    AC_MSG_CHECKING(for Python linkage)
    py_prefix=`$_PATH_PYTHON -c 'import sys; print sys.prefix'`
    py_ver=`$_PATH_PYTHON -c 'import sys; print sys.version[[:3]]'`
    py_libdir="${py_prefix}/lib/python${py_ver}"
    PYTHON_INC="-I${py_prefix}/include/python${py_ver}"
    py_libs=`grep '^LIBS=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
    py_libc=`grep '^LIBC=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
    py_libm=`grep '^LIBM=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
    PYTHON_LIB="-L$py_libdir/config $py_libs $py_libc $py_libm -lpython$py_ver"
    PYTHON_LIB=`echo $PYTHON_LIB | sed -e 's/[ \\t]*/ /g'`
    AC_MSG_RESULT($py_libdir)
else
    PYTHON_LIB=""
    PYTHON_INC=""
fi
AC_SUBST(PYTHON_LIB)
AC_SUBST(PYTHON_INC)

dnl If configuring with large file support, use getconf to set our compile
dnl and link flags and check for some necessary functions.
if test x"$DO_LFS" = xDO ; then
    AC_MSG_CHECKING(for largefile linkage)
    LFS_CFLAGS=`$GETCONF LFS_CFLAGS`
    LFS_LDFLAGS=`$GETCONF LFS_LDFLAGS`
    LFS_LIBS=`$GETCONF LFS_LIBS`
    AC_SUBST(LFS_CFLAGS)
    AC_SUBST(LFS_LDFLAGS)
    AC_SUBST(LFS_LIBS)
    AC_MSG_RESULT(ok)
    AC_CHECK_FUNCS(ftello fseeko)
fi

dnl Special checks for header files.

dnl Start by checking for standard C headers.  AC_HEADER_STDC will set
dnl STDC_HEADERS if stdlib.h, stdarg.h, string.h, and float.h all exist,
dnl if memchr() (and probably the other mem functions) is in string.h,
dnl if free() (and probably malloc() and friends) are in stdlib.h, and if
dnl ctype.h will work on high-bit characters.
AC_HEADER_STDC

dnl Only if that wasn't set do we need to go hunting for other headers to
dnl include on non-ANSI systems and check for functions that all ANSI C
dnl systems should have.
if test x"$ac_cv_header_stdc" = xno ; then
    AC_CHECK_HEADERS(memory.h stdarg.h string.h varargs.h)
    AC_CHECK_FUNCS(memcpy strchr)
    AC_REPLACE_FUNCS(memchr memmove memset)
fi

dnl Special checks for header files.
AC_HEADER_DIRENT
AC_HEADER_TIME
AC_HEADER_SYS_WAIT      dnl NOTUSED

dnl Generic checks for header files.
dnl NOTUSED: getopt.h sgtty.h sys/file.h sys/ioctl.h sys/time.h
dnl
dnl FIXME: The checks for sys/filio.h and sys/ioctl.h should be included
dnl in the check for what type of close-on-exec method to use, and that
dnl should preferrably be in source code rather than configure hackage.

AC_CHECK_HEADERS(fcntl.h getopt.h limits.h sgtty.h stddef.h stdint.h \
                 sys/file.h sys/filio.h sys/ioctl.h sys/select.h \
                 sys/sysinfo.h sys/time.h unistd.h wait.h)

dnl Some Linux systems have db1/ndbm.h instead of ndbm.h.
AC_CHECK_HEADER(ndbm.h, AC_DEFINE(HAVE_NDBM_H),
    AC_CHECK_HEADERS(db1/ndbm.h))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_TM            dnl NOTUSED
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_CHECK_TYPE(caddr_t, char *)

dnl From Paul D. Smith <psmith@baynetworks.com> on the autoconf mailing
dnl list, this is a version of AC_CHECK_TYPE that allows specification of
dnl additional headers.  It's a modified version of the standard autoconf
dnl macro.
AC_DEFUN(INN_CHECK_TYPE, [
    AC_REQUIRE([AC_HEADER_STDC])dnl
    AC_MSG_CHECKING(for $1)
    AC_CACHE_VAL(ac_cv_type_$1, [AC_EGREP_CPP(dnl
changequote(<<, >>)dnl
<<(^|[^a-zA-Z_0-9])$1[^a-zA-Z_0-9]>>dnl
changequote([, ]), [
#include <sys/types.h>
#ifdef STDC_HEADERS
# include <stdlib.h>
# include <stddef.h>
#endif
$3],
        ac_cv_type_$1=yes,
        ac_cv_type_$1=no
    )])dnl
    AC_MSG_RESULT($ac_cv_type_$1)
    if test x"$ac_cv_type_$1" = xno ; then
        AC_DEFINE_UNQUOTED($1, $2)
    fi
])

dnl If sig_atomic_t is available, use it instead of int as the type of a
dnl variable that can be set inside signal handlers.
INN_CHECK_TYPE(sig_atomic_t, int, [#include <signal.h>])

dnl Make sure INADDR_NONE is defined.
dnl FIXME: The code that uses this should just check against -1 instead.
AC_DEFUN(INN_CHECK_DEFINE, [
    AC_MSG_CHECKING(for $1)
changequote(<<, >>)dnl
define(<<AC_VAR_NAME>>, translit($1, [A-Z], [a-z]))dnl
changequote([, ])dnl
    AC_CACHE_VAL(inn_cv_[]AC_VAR_NAME, [AC_EGREP_CPP(yes, [
#include <sys/types.h>
#include <sys/socket.h>
#include <netinet/in.h>
#include <arpa/inet.h>

#ifdef INADDR_NONE
yes
#endif
],
        inn_cv_[]AC_VAR_NAME=yes,
        inn_cv_[]AC_VAR_NAME=no
    )])dnl
    AC_MSG_RESULT($inn_cv_[]AC_VAR_NAME)
    if test x"$inn_cv_[]AC_VAR_NAME" = xno ; then
        AC_DEFINE($1, $2)
    fi
])
INN_CHECK_DEFINE(INADDR_NONE, [(unsigned long) -1])

dnl Check for SUN_LEN.
AC_DEFUN(INN_MACRO_SUN_LEN, [
    AC_MSG_CHECKING(for SUN_LEN)
    AC_CACHE_VAL(inn_cv_macro_sun_len, AC_TRY_LINK([
#include <sys/types.h>
#include <sys/un.h>
    ], [
int main() {
    struct sockaddr_un sun;
    int i;

    i = SUN_LEN(&sun);
}
    ],
    inn_cv_macro_sun_len=yes,
    inn_cv_macro_sun_len=no))
    AC_MSG_RESULT($inn_cv_macro_sun_len)
    if test x"$inn_cv_macro_sun_len" = xyes ; then
        AC_DEFINE(HAVE_SUN_LEN)
    fi
])
INN_MACRO_SUN_LEN

dnl FIXME: The external variable timezone is available on some platforms and
dnl accomplishes the same purpose (but is more standard).
AC_CACHE_CHECK(for tm_gmtoff in struct tm, inn_cv_struct_tm_gmtoff,
    AC_TRY_LINK([#include <time.h>],
        [struct tm t; t.tm_gmtoff = 0],
        inn_cv_struct_tm_gmtoff=yes,
        inn_cv_struct_tm_gmtoff=no))
if test "$inn_cv_struct_tm_gmtoff" = yes ; then
    AC_DEFINE(HAVE_TM_GMTOFF)
fi

dnl FIXME: You don't want to use this result on HP-UX; see clibrary.h.
dnl Plus, according to the autoconf docs, you want to prefer the return type
dnl of int rather than the union return type, and define your own macros if
dnl HAVE_SYS_WAIT_H isn't true.  See docs in AC_HEADER_SYS_WAIT.
AC_CACHE_CHECK(for union wait, inn_cv_union_wait,
    AC_TRY_LINK([
#ifdef HAVE_WAIT_H
# include <wait.h>
#else
# include <sys/wait.h>
#endif],
        [union wait w],
        inn_cv_union_wait=yes,
        inn_cv_union_wait=no))
if test "$inn_cv_union_wait" = yes ; then
    AC_DEFINE(HAVE_UNION_WAIT)
fi

dnl A modified version of AC_CHECK_SIZEOF that doesn't always AC_DEFINE, but
dnl instead lets you execute shell code based on success or failure.  This
dnl is to avoid config.h clutter.
AC_DEFUN(INN_IF_SIZEOF,
[changequote(<<, >>)dnl
dnl The name to #define.
define(<<AC_TYPE_NAME>>, translit(sizeof_$1, [a-z *], [A-Z_P]))dnl
dnl The cache variable name.
define(<<AC_CV_NAME>>, translit(ac_cv_sizeof_$1, [ *], [_p]))dnl
changequote([, ])dnl
AC_MSG_CHECKING(size of $1)
AC_CACHE_VAL(AC_CV_NAME,
[AC_TRY_RUN([#include <stdio.h>
main()
{
    FILE *f = fopen("conftestval", "w");
    if (!f) exit(1);
    fprintf(f, "%d\n", sizeof($1));
    exit(0);
}], AC_CV_NAME=`cat conftestval`, AC_CV_NAME=0,
ifelse([$2], , , AC_CV_NAME=$2))
])dnl
AC_MSG_RESULT($AC_CV_NAME)
if test x"$AC_CV_NAME" = x"$3" ; then
    ifelse([$4], , :, [$4])
else
    ifelse([$5], , :, [$5])
fi
undefine([AC_TYPE_NAME])dnl
undefine([AC_CV_NAME])dnl
])

dnl Find a 32 bit type, by trying likely candidates.  First, check for the
dnl C9X int32_t, then look for something else with a size of four bytes.
INN_IF_SIZEOF(int, 4, 4, INN_INT32=int, [
    INN_IF_SIZEOF(long, 4, 4, INN_INT32=long, [
        INN_IF_SIZEOF(short, 2, 4, INN_INT32=short)
    ])
])
INN_CHECK_TYPE(int32_t, $INN_INT32,
[#ifdef HAVE_STDINT_H
# include <stdint.h>
#endif
])

dnl Figure out the unsigned version.
if test x"$ac_cv_type_int32_t" = xyes ; then
    INN_INT32=int32_t
fi
INN_CHECK_TYPE(uint32_t, unsigned $INN_INT32,
[#ifdef HAVE_STDINT_H
# include <stdint.h>
#endif
])

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_SETVBUF_REVERSED        dnl NOTUSED
AC_FUNC_VFORK
AC_FUNC_VPRINTF                 dnl NOTUSED
AC_TYPE_SIGNAL

dnl Check for various other functions.
dnl
dnl NOTUSED: gethostname mkfifo strcspn strstr
dnl
dnl FIXME: fchmod and gettimeofday are checked some of the places they're
dnl used, but not all of them.
dnl
dnl FIXME: pwrite and pread should be in REPLACE_FUNCS instead.

AC_CHECK_FUNC(syslog, , AC_MSG_ERROR(syslog not found, required by INN))

AC_CHECK_FUNCS(atexit fchmod gethostname getpagesize getrusage getspnam \
               gettimeofday mkfifo pread pwrite setbuffer sigaction \
               setsid socketpair strcspn strncasecmp strstr strtoul \
               symlink waitpid)

dnl We only care if we have setreuid() if we don't have seteuid().
AC_CHECK_FUNCS(seteuid setreuid, break)

dnl We need both *rlimit functions.
AC_CHECK_FUNC(getrlimit, AC_CHECK_FUNC(setrlimit, AC_DEFINE(HAVE_RLIMIT)))

dnl Check for sysconf, getdtablesize, and then ulimit in that order; we'll
dnl use them to figure out our current file descriptor limit.
AC_CHECK_FUNCS(sysconf getdtablesize ulimit, break)

dnl Locking style.
AC_CHECK_FUNCS(flock lockf fcntl)

dnl If we can't find any of the following, we have replacements for them.
AC_REPLACE_FUNCS(getopt memchr memcpy memmove memset strcasecmp strchr \
                 strerror strrchr strspn)

MISSING_OBJ="$LIBOBJS"
MISSING_SRC=`echo "$MISSING_OBJ" | sed 's/\.o/.c/g'`

if test "$ac_cv_func_strcasecmp" = no ; then
    MISSING_MAN=strcasecmp.3
else
    MISSING_MAN=''
fi

AC_SUBST(MISSING_MAN)
AC_SUBST(MISSING_SRC)
AC_SUBST(MISSING_OBJ)

dnl Figure out how to get file system information for inndf.
AC_CHECK_FUNCS(statvfs, AC_DEFINE(HAVE_STATVFS), [
    AC_CHECK_FUNCS(statfs)
    AC_CHECK_HEADERS(sys/vfs.h sys/param.h sys/mount.h)
])

dnl See if mmap sees writes. 
dnl ========================================================
dnl For cross compiling, just define it as no, which is a safe default
AC_MSG_CHECKING(if mmap() sees write()s)
AC_TRY_RUN(
    #include <stdlib.h>
    #include <unistd.h>
    #include <sys/mman.h>
    #include <sys/types.h>
    #include <sys/stat.h>
    #include <fcntl.h>

    char fname[[]] = "conftest.file";
    char zbuff[[1024]]; /* Fractional page is probably worst case */

    int main() {
       char *map;
       int fd;
       int i;
       unlink(fname);
       fd = open(fname, O_RDWR | O_CREAT, 0660);
       if(fd<0) exit(1);
       unlink(fname);
       write(fd, zbuff, sizeof(zbuff));
       lseek(fd, 0, SEEK_SET);
       map = (char*)mmap(0, sizeof(zbuff), PROT_READ, MAP_SHARED, fd, 0);
       if(map==(char*)-1) exit(2);
       for(i=0; fname[[i]]; i++) {
           int rc = write(fd, &fname[[i]], 1);
           if(map[[i]]!=fname[[i]]) exit(4);
       }
       exit(0);
    }
    , [ result="yes"],
    [result="no"],
    [result="yes"] )

AC_MSG_RESULT("$result")

if test "$result" = "no"; then
    AC_DEFINE(MMAP_MISSES_WRITES)
fi

dnl This portion is similar to what AC_FUNC_MMAP does, only it tests shared,
dnl non-fixed mmaps.

AC_CACHE_CHECK(for working mmap, ac_cv_func_mmap_shared,
    [AC_TRY_RUN([
/* test shared mmap */
#include <sys/types.h>
#include <fcntl.h>
#include <sys/mman.h>

/* This mess was copied from the GNU getpagesize.h.  */
#ifndef HAVE_GETPAGESIZE
# ifdef HAVE_UNISTD_H
#  include <unistd.h>
# endif

/* Assume that all systems that can run configure have sys/param.h.  */
# ifndef HAVE_SYS_PARAM_H
#  define HAVE_SYS_PARAM_H 1
# endif

# ifdef _SC_PAGESIZE
#  define getpagesize() sysconf(_SC_PAGESIZE)
# else /* no _SC_PAGESIZE */
#  ifdef HAVE_SYS_PARAM_H
#   include <sys/param.h>
#   ifdef EXEC_PAGESIZE
#    define getpagesize() EXEC_PAGESIZE
#   else /* no EXEC_PAGESIZE */
#    ifdef NBPG
#     define getpagesize() NBPG * CLSIZE
#     ifndef CLSIZE
#      define CLSIZE 1
#     endif /* no CLSIZE */
#    else /* no NBPG */
#     ifdef NBPC
#      define getpagesize() NBPC
#     else /* no NBPC */
#      ifdef PAGESIZE
#       define getpagesize() PAGESIZE
#      endif /* PAGESIZE */
#     endif /* no NBPC */
#    endif /* no NBPG */
#   endif /* no EXEC_PAGESIZE */
#  else /* no HAVE_SYS_PARAM_H */
#   define getpagesize() 8192   /* punt totally */
#  endif /* no HAVE_SYS_PARAM_H */
# endif /* no _SC_PAGESIZE */

#endif /* no HAVE_GETPAGESIZE */

#ifdef __cplusplus
extern "C" { void *malloc(unsigned); }
#else
char *malloc();
#endif

int
main()
{
        char *data, *data2;
        int i, pagesize;
        int fd;

        pagesize = getpagesize();

        /*
         * First, make a file with some known garbage in it.
         */
        data = malloc(pagesize);
        if (!data)
                exit(1);
        for (i = 0; i < pagesize; ++i)
                *(data + i) = rand();
        umask(0);
        fd = creat("conftestmmaps", 0600);
        if (fd < 0)
                exit(1);
        if (write(fd, data, pagesize) != pagesize)
                exit(1);
        close(fd);

        /*
         * Next, try to mmap the file.  If we can,
         * also make sure that we see the same garbage.
         */
        fd = open("conftestmmaps", O_RDWR);
        if (fd < 0)
                exit(1);
        if (! (data2 = mmap((void*)0, pagesize, PROT_READ | PROT_WRITE,
            MAP_SHARED, fd, 0L)) )
                exit(1);
        for (i = 0; i < pagesize; ++i)
                if (*(data + i) != *(data2 + i))
                        exit(1);

        close(fd);
        unlink("conftestmmaps");
        exit(0);
}
],
    ac_cv_func_mmap_shared=yes,
    ac_cv_func_mmap_shared=no,
    ac_cv_func_mmap_shared=no)
])
if test $ac_cv_func_mmap_shared = yes ; then
    AC_DEFINE(HAVE_MMAP)
    AC_CHECK_FUNCS(madvise)
fi

AC_CACHE_CHECK(whether msync is needed, ac_cv_func_need_msync,
    [AC_TRY_RUN([
/* test shared mmap (msync) */
#include <sys/types.h>
#include <fcntl.h>
#include <sys/mman.h>

/* This mess was copied from the GNU getpagesize.h.  */
#ifndef HAVE_GETPAGESIZE
# ifdef HAVE_UNISTD_H
#  include <unistd.h>
# endif

/* Assume that all systems that can run configure have sys/param.h.  */
# ifndef HAVE_SYS_PARAM_H
#  define HAVE_SYS_PARAM_H 1
# endif

# ifdef _SC_PAGESIZE
#  define getpagesize() sysconf(_SC_PAGESIZE)
# else /* no _SC_PAGESIZE */
#  ifdef HAVE_SYS_PARAM_H
#   include <sys/param.h>
#   ifdef EXEC_PAGESIZE
#    define getpagesize() EXEC_PAGESIZE
#   else /* no EXEC_PAGESIZE */
#    ifdef NBPG
#     define getpagesize() NBPG * CLSIZE
#     ifndef CLSIZE
#      define CLSIZE 1
#     endif /* no CLSIZE */
#    else /* no NBPG */
#     ifdef NBPC
#      define getpagesize() NBPC
#     else /* no NBPC */
#      ifdef PAGESIZE
#       define getpagesize() PAGESIZE
#      endif /* PAGESIZE */
#     endif /* no NBPC */
#    endif /* no NBPG */
#   endif /* no EXEC_PAGESIZE */
#  else /* no HAVE_SYS_PARAM_H */
#   define getpagesize() 8192   /* punt totally */
#  endif /* no HAVE_SYS_PARAM_H */
# endif /* no _SC_PAGESIZE */

#endif /* no HAVE_GETPAGESIZE */

#ifdef __cplusplus
extern "C" { void *malloc(unsigned); }
#else
char *malloc();
#endif

int
main()
{
        char *data, *data2, *data3;
        int i, pagesize;
        int fd, rval;

        pagesize = getpagesize();

        /*
         * First, make a file with some known garbage in it.
         */
        data = malloc(pagesize);
        if (!data)
                exit(1);
        for (i = 0; i < pagesize; ++i)
                *(data + i) = rand();
        umask(0);
        fd = creat("conftestmmapm", 0600);
        if (fd < 0)
                exit(1);
        if (write(fd, data, pagesize) != pagesize)
                exit(1);
        close(fd);

        /*
         * Next, try to mmap the file.
         */
        fd = open("conftestmmapm", O_RDWR);
        if (fd < 0)
                exit(1);
        if (! (data2 = mmap((void*)0, pagesize, PROT_READ | PROT_WRITE,
            MAP_SHARED, fd, 0L)) )
                exit(1);

        /*
         * Finally, see if changes to the mapped area automatically
         * percolate back to the file as seen by read().
         * I.E., msync is not needed
         */
	rval = 0;
        for (i = 0; i < pagesize; ++i)
                *(data2 + i) = *(data2 + i) + 1;
        data3 = malloc(pagesize);
        if (!data3)
                exit(1);
        if (read(fd, data3, pagesize) != pagesize)
                exit(1);
        for (i = 0; i < pagesize; ++i)
                if (*(data + i) != *(data3 + i))
                        rval = 1;
        close(fd);
        unlink("conftestmmapm");
        exit(rval);
}
],
    ac_cv_func_need_msync=yes,
    ac_cv_func_need_msync=no,
    ac_cv_func_need_msync=no)
])
if test x"$ac_cv_func_need_msync" = xyes ; then
    AC_DEFINE(MMAP_NEEDS_MSYNC)
fi

dnl Turn on keyword support if we have the regex library.
dnl
dnl FIXME: This is completely broken and makes no sense whatsoever.  It
dnl needs to be moved up to a --with-keywords flag and an error printed
dnl if --with-keywords is given and regexec() can't be found.
if test $ac_cv_lib_regex_regexec = no; then
    AC_CHECK_FUNC(regexec, AC_DEFINE(DO_KEYWORDS))
fi

dnl FIXME: I think we only need this if we need msync().
AC_CACHE_CHECK(for three argument msync, inn_cv_func_msync_3_args,
    AC_TRY_LINK([
#include <sys/types.h>
#include <sys/mman.h>],
        [char *p; int psize; msync(p,psize,MS_ASYNC); ],
        inn_cv_func_msync_3_args=yes,
        inn_cv_func_msync_3_args=no))
if test "$inn_cv_func_msync_3_args" = yes ; then
    AC_DEFINE(HAVE_MSYNC_3_ARG)
fi

dnl If AF_UNIX is set in <sys/socket.h>, assume we have Unix domain sockets.
AC_MSG_CHECKING(for Unix domain sockets)
AC_EGREP_CPP(yes, [
#include <sys/socket.h>
#ifdef AF_UNIX
yes
#endif], [
        AC_DEFINE(HAVE_UNIX_DOMAIN_SOCKETS)
        AC_MSG_RESULT(yes)
    ],
    AC_MSG_RESULT(no))

dnl How to set file descriptors close on exec.  -- fjc mibsoftware.com
dnl
dnl FIXME: This belongs in the source code, not in configure.  configure has
dnl already done the necessary probes and the results are only used in a
dnl single place, lib/closeonexec.c.
AC_MSG_CHECKING(for close on exec style)
CLX_STYLE=unknown
if test "$ac_cv_header_fcntl_h" = yes ; then
    AC_EGREP_CPP(yes, [
#include <fcntl.h>
#ifdef FD_CLOEXEC
yes
#else
# ifdef F_SETFD
yes
# endif
#endif], [
        AC_DEFINE(CLX_FCNTL)
        AC_MSG_RESULT(FCNTL)
        CLX_STYLE=fcntl
    ])
fi
if test "$CLX_STYLE" = unknown ; then
    if test "$ac_cv_header_sys_filio_h" = yes ; then
        AC_EGREP_CPP(yes, [
#include <sys/filio.h>
#ifdef FIOCLEX
yes
#endif], [
            AC_DEFINE(CLX_IOCTL)
            AC_MSG_RESULT(IOCTL)
            CLX_STYLE=ioctl
        ])
    fi
fi
if test "$CLX_STYLE" = unknown ; then
    AC_MSG_ERROR(Must set CLX_STYLE)
fi

dnl How to set non-blocking I/O.  -- fjc mibsoftware.com
dnl
dnl Want to avoid fcntl(FNDELAY) which is inconsistent.  If O_NONBLOCK is
dnl present, we use that, otherwise fall back to FIONBIO.
dnl
dnl FIXME: This belongs in the source code, not in configure.  configure has
dnl already done the necessary probes and the results are only used in
dnl lib/nonblocking.c and in innfeed/connection.c.
AC_MSG_CHECKING(for non-blocking I/O style)
NBIO_STYLE=unknown
if test "$ac_cv_header_fcntl_h" = yes ; then
    AC_EGREP_CPP(yes, [
#include <fcntl.h>
#ifdef O_NONBLOCK
yes
#endif], [
        AC_DEFINE(NBIO_FCNTL)
        AC_MSG_RESULT(FCNTL)
        NBIO_STYLE=FCNTL
    ])
fi
if test "$NBIO_STYLE" = unknown ; then
    if test "$ac_cv_header_sys_filio_h" = yes ; then
        AC_EGREP_CPP(yes, [
#include <sys/filio.h>
#ifdef FIONBIO
yes
#endif], [
            AC_DEFINE(NBIO_IOCTL)
            AC_MSG_RESULT(IOCTL)
            NBIO_STYLE=IOCTL
        ])
    fi
fi
if test "$NBIO_STYLE" = unknown ; then
    AC_MSG_ERROR(Must set NBIO_STYLE)
fi

dnl FIXME: This is totally the wrong way to do this.  First, it should be
dnl using the results of config.guess and should be done at the top of
dnl configure, and second, it should use autoconf's standard check for
dnl compiler consistency rather than rolling its own test if at all
dnl possible.

AC_DEFUN(AC_SYS_COMPILER_FLAG,
[
  AC_MSG_CHECKING($1)
  OLD_CFLAGS="[$]CFLAGS"
  AC_CACHE_VAL(inn_cv_option_$2,
  [
    CFLAGS="[$]OLD_CFLAGS $1"
    AC_TRY_RUN([int main(){exit(0);}],
               inn_cv_option_$2=yes,
               inn_cv_option_$2=no, inn_cv_option_$2=no)
  ])
  
  CFLAGS="[$]OLD_CFLAGS"
  
  if test x"[$]inn_cv_option_$2" = "xyes" ; then
    $3="[$]$3 $1"
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
])

# We need some special hacks when running slowaris
AC_PATH_PROG(uname_prog,uname,no)
AC_MSG_CHECKING(operating system)
AC_CACHE_VAL(inn_cv_sys_os,
[
if test "$uname_prog" != "no"; then
  inn_cv_sys_os="`uname`"

  case "$inn_cv_sys_os" in
    SunOS)
      case "`uname -r`" in
        5.*) inn_cv_sys_os="Solaris";
      esac
    ;;
  esac
else
  inn_cv_sys_os="Not Solaris"
fi
])
AC_MSG_RESULT($inn_cv_sys_os)

case "$inn_cv_sys_os" in
  SCO*)
     case "$CFLAGS" in
       *-belf*) 
          AC_SYS_COMPILER_FLAG(-belf,sco_belf_option,CFLAGS,[],[
           case "$LDFLAGS" in
             *-belf*) ;;
             *)
	        echo "Adding -belf option to ldflags."
                LDFLAGS="$LDFLAGS -belf"
             ;;
           esac
          ])
	;;
       *)
          AC_SYS_COMPILER_FLAG(-belf,sco_belf_option,CFLAGS,[],[
           case "$LDFLAGS" in
             *-belf*) ;;
             *)
	        echo "Adding -belf option to ldflags."
                LDFLAGS="$LDFLAGS -belf"
             ;;
           esac
          ])
       ;;
     esac
  ;;

  UnixWare*)
    if test "$GCC" != "yes"; then
      # We are using built-in inline function
      CFLAGS="$CFLAGS -Kalloca"
      CXX="CC -DNO_CPLUSPLUS_ALLOCA"
    fi
  ;;

  HP-UX)
    if test "$GCC" != "yes"; then
      # Need flag to turn on ANSI
      CFLAGS="$CFLAGS -Ae"
      # Need -g on link command for debug to work properly
      case "$CFLAGS" in
        *-g*)
          LDFLAGS="$LDFLAGS -g"
        ;;
      esac
    fi
  ;;
esac
AC_SUBST(CFLAGS)
AC_SUBST(CXX)
AC_SUBST(LD)
AC_SUBST(LDFLAGS)

dnl Default to LOG_NEWS for syslog facility if it's available, but if it's
dnl not, fall back on LOG_LOCAL1.  --with-syslog-facility may have already
dnl set this.
AC_MSG_CHECKING(log facility for news)
if test x"$SYSLOG_FACILITY" = xnone ; then
    AC_EGREP_CPP(yes, [
#include <syslog.h>
#ifdef LOG_NEWS
yes
#endif], [
        SYSLOG_FACILITY=LOG_NEWS
        AC_MSG_RESULT(LOG_NEWS)
    ], [
        SYSLOG_FACILITY=LOG_LOCAL1
        AC_MSG_RESULT(LOG_LOCAL1)
    ])
else
    AC_MSG_RESULT($SYSLOG_FACILITY)
fi
AC_DEFINE_UNQUOTED(LOG_INN_SERVER, $SYSLOG_FACILITY)
AC_DEFINE_UNQUOTED(LOG_INN_PROG, $SYSLOG_FACILITY)
AC_SUBST(SYSLOG_FACILITY)

dnl Clean up our LIBS, just for grins.
LIBS=`echo "$LIBS" | sed 's/^  *//' | sed 's/   */ /g'`

AC_CONFIG_HEADER(include/config.h)
AC_OUTPUT(
	Makefile.global
	makedirs.sh
	backends/actmerge.sh
	backends/actsyncd.sh
	backends/sendxbatches.sh
	frontends/c7unbatch.sh
	frontends/gunbatch.sh
	include/paths.h
	innfeed/innfeed-convcfg
	innfeed/procbatch
	samples/actsync.cfg
	samples/checkgroups
	samples/checkgroups.pl
	samples/cnfsheadconf
	samples/cnfsstat
	samples/controlbatch
	samples/controlchan
	samples/default
	samples/docheckgroups
	samples/expirerm
	samples/ihave
	samples/ihave.pl
	samples/inn.conf
	samples/inncheck
	samples/innmail
	samples/innreport
	samples/innreport.conf
	samples/innshellvars
	samples/innshellvars.pl
	samples/innshellvars.tcl
	samples/innstat
	samples/innwatch
	samples/innwatch.ctl
	samples/mailpost
	samples/mod-active
	samples/news2mail
	samples/news.daily
	samples/newgroup
	samples/newgroup.pl
	samples/newsfeeds
	samples/nnrpd_auth.pl
	samples/nntpsend
	samples/parsecontrol
	samples/pgpverify
	samples/pullnews
	samples/rc.news
	samples/rmgroup
	samples/rmgroup.pl
	samples/scanlogs
	samples/scanspool
	samples/send-ihave
	samples/send-nntp
	samples/send-uucp
	samples/sendbatch
	samples/sendme
	samples/sendme.pl
	samples/sendsys
	samples/sendsys.pl
	samples/senduuname
	samples/senduuname.pl
	samples/signcontrol
	samples/simpleftp
	samples/startup.tcl
	samples/tally.control
	samples/version
	samples/version.pl
	samples/writelog
	storage/buildconfig
	storage/ovbuildconfig
	,
	chmod +x storage/buildconfig storage/ovbuildconfig
)

cat .now_do

if test -d "$RUNDIR" ; then
    ownergroup=`echo "${RUNDIR}" | $_PATH_PERL -e 'local (@sb, $owner, $group); $_ = <>; chop; @sb = stat; $owner = (getpwuid($sb[[4]]))[[0]]; $group = (getgrgid($sb[[5]]))[[0]]; print "$owner:$group\n";'`
    if test x"$ownergroup" != x"${NEWSUSER}:${NEWSGRP}" ; then
        echo <<EOF
NOTE: The owner and the group of "${RUNDIR}" which is specified by
      "--with-run-dir=" is incorrect.  It should be owned by "${NEWSUSER}"
      with a group of "${NEWSGRP}".  Set its owner and group correctly
      before you start innd, or run configure again with "--with-run-dir="
      to specify another directory.  Otherwise, you may encounter serious
      problems.
EOF
    fi
fi
